# sketch-retopo

./: CMakeLists.txt  README
resource/: basemesh.frag  basemesh.frag.stringify.txt  basemesh.vert  basemesh.vert.stringify.txt  basic.frag  basic.frag.stringify.txt  basic.vert  basic.vert.stringify.txt  corner.frag  corner.frag.stringify.txt  corner.vert  corner.vert.stringify.txt  material_default.base64.txt  material_default.base64.txt.stringify.txt
script/: minidump_stackwalk.bat  minidump_stackwalk.py  stringify.py  symbolstore.bat  symbolstore.py
src/AntTweakBar/: TwBar.cpp  TwMgr.cpp  TwMgr.h
src/SketchRetopo/: AutoSave.hh  AutocmplInfo.hh  AutopoMesh.cc  AutopoMesh.hh  BaseMesh.cc  BaseMesh.hh  ConfigRender.hh  ConfigSaved.hh  ConfigTemp.hh  RealParam.hh  SketchRetopo.hh  SketchRetopo_core.cc  SketchRetopo_event.cc  SketchRetopo_fileio.cc  SketchRetopo_init.cc  SketchRetopo_intersect.cc  SketchRetopo_misc.cc  SketchRetopo_render.cc  helper.hh  main.cc
src/SketchRetopo/curvenetwork/: Circulator.hh  Core.cc  Core.hh  Edgechain.cc  Edgechain.hh  ElemPtrT.hh  Halfchain.cc  Halfchain.hh  Halfedge.cc  Halfedge.hh  Patch.cc  Patch.hh  Vertex.cc  Vertex.hh  decl.hh  helper.cc  helper.hh
src/SketchRetopo/state/: Button.hh  State.cc  State.hh  StateAutocmpl.cc  StateAutocmpl.hh  StateCylinder.cc  StateCylinder.hh  StateDeformCurve.cc  StateDeformCurve.hh  StateEdgeLoop.cc  StateEdgeLoop.hh  StateEditCorner.cc  StateEditCorner.hh  StateEditTopology.cc  StateEditTopology.hh  StateLaser.cc  StateLaser.hh  StateMoveVertex.cc  StateMoveVertex.hh  StateSketch.cc  StateSketch.hh  StateSpine.cc  StateSpine.hh
src/base64/: cdecode.h  cencode.h  decode.h  encode.h
src/embree-1.1/common/sys/: intrinsics.h  sysinfo.cpp
src/embree-1.1/rtcore/common/: ray.h
src/kt84/: .hg_archival.txt  Memento.hh  adjacent_pairs.hh  container_util.hh  dbg.cc  dbg.hh  eigen_util.hh  glut_util.hh  ret_msg.hh  vector_cast.hh
src/kt84/geometry/: CameraFree.hh  CameraUpright.hh  PolylineT.hh
src/kt84/graphics/: FramebufferObject.hh  ProgramObject.hh  RenderbufferObject.hh  graphics_util.hh  phong_tessellation.hh
src/kt84/math/: GeneralizedMLS.hh  HermiteRBF.hh  MLS.hh  PolynomialBasisGen.hh  RBF.hh  interpolant_test.cc
src/kt84/openmesh/: FaceBaryCoordT.hh  edgeloop.hh  is_quadmesh.hh
src/kt84/openmesh/base/: BoundingBox.hh  CenterOfMass.hh  CotanWeight.hh  DebugInfo.hh  EdgeLength.hh  ExpMap.hh  FaceArea.hh  Gradient.hh  KdTree.hh  LaplaceDirect.hh  LaplaceIterative.hh  NormalCurvature.hh  NormalVariation.hh  SurfaceTopology.hh  TODO_Geodesic.hh  Utility.hh
src/patchgen/: PatchParam.hh  PatchVertexTag.hh  PatchVertexTraits.hh  Pattern.hh  Pattern_2_0.hh  Pattern_2_1.hh  Pattern_3_0.hh  Pattern_3_1.hh  Pattern_3_2.hh  Pattern_3_3.hh  Pattern_4_0.hh  Pattern_4_1.hh  Pattern_4_2.hh  Pattern_4_3.hh  Pattern_4_4.hh  Pattern_5_0.hh  Pattern_5_1.hh  Pattern_5_2.hh  Pattern_5_3.hh  Pattern_5_4.hh  Pattern_6_0.hh  Pattern_6_1.hh  Pattern_6_2.hh  Pattern_6_3.hh  Pattern_all.hh  add_padding.hh  adjust_parameter.cc  decl.hh  generate_subtopology.hh  generate_topology.hh  get_boundary_geometry.cc  get_constraint_matrix.cc  get_constraint_rhs.cc  get_default_parameter.cc  get_param_str.cc  get_variable.cc  get_variable_indicators.cc  switch_pattern.cc
src/patchgen_demo/: Patch.cc  Patch.hh  decl.hh  determine_geometry.cc  generate_patch.cc  get_fname.cc  main.cc  main_glut.cc  save_mesh.cc
